<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>

		<version>3.4.4</version>

		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.smartprocessrefusao</groupId>
	<artifactId>erprefusao</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>erprefusao</name>
	<description>ERP refusaoAluminio</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
		    <groupId>jakarta.validation</groupId>
		    <artifactId>jakarta.validation-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.hibernate.validator</groupId>
		    <artifactId>hibernate-validator</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-oauth2-authorization-server</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>
	</dependencies>


	<build>
		<plugins>
			<plugin>
			  <groupId>org.jacoco</groupId>
			  <artifactId>jacoco-maven-plugin</artifactId>
			  <version>0.8.11</version>
			</plugin>
			
			<plugin>
		        <groupId>org.jacoco</groupId>
		        <artifactId>jacoco-maven-plugin</artifactId>
		        <version>0.8.11</version>
			<configuration>
		    <excludes>
		      <exclude>com/smartprocessrefusao/erprefusao/resources/exceptions/**</exclude>
		      <exclude>com/smartprocessrefusao/erprefusao/resources/**</exclude>
		      <exclude>com/smartprocessrefusao/erprefusao/services/validation/**</exclude>
		      <exclude>com/smartprocessrefusao/erprefusao/enumerados/**</exclude>
		      <exclude>com/smartprocessrefusao/erprefusao/util/**</exclude>
		      <exclude>com/smartprocessrefusao/erprefusao/ErprefusaoApplication.class</exclude>
		      <exclude>com/smartprocessrefusao/erprefusao/index.html</exclude>
		      <exclude>com/smartprocessrefusao/erprefusao/index.source.html</exclude>
		      <exclude>com/smartprocessrefusao/erprefusao/config/**</exclude>
		      <exclude>com/smartprocessrefusao/erprefusao/entities/**</exclude>
		      <exclude>com/smartprocessrefusao/erprefusao/dto/**</exclude>
		      <exclude>com/smartprocessrefusao/erprefusao/controllers/handlers/**</exclude>
		      <exclude>com/smartprocessrefusao/erprefusao/services/exceptions/**</exclude>
		    </excludes>
		  </configuration>
		
		  <executions>
		    <execution>
		      <goals>
		        <goal>prepare-agent</goal>
		      </goals>
		    </execution>
		    <execution>
		      <id>jacoco-report</id>
		      <phase>verify</phase>
		      <goals>
		        <goal>report</goal>
		      </goals>
		      <configuration>
		        <outputDirectory>target/jacoco-report</outputDirectory>
		      </configuration>
		    </execution>
		  </executions>
		   </plugin>
		</plugins>
	</build>
</project>
